--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* google fonts added */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 /* shared styles */
 * {
@@ -7,6 +8,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+
 }
 
 header {
@@ -99,10 +101,91 @@ header {
     /* padding-right: 40px; */
 }
 
+/* website section styles */
+
+.websites {
+    max-width: max-content;
+    margin: 60px auto;
+    padding: 20px 0px;
+    border: 1px solid;
+    border-image: linear-gradient(to right, transparent, rgba(128, 128, 128, 0.438), transparent);
+    border-left: 0px;
+    border-right: 0px;
+    border-image-slice: 1;
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+
+}
+
+/* popular section styles */
+.popular {
+    width: 1000px;
+    margin: 0px auto;
+}
+
+.popular-title {
+    margin: 100px 0px 30px;
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.popular-collection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.popular-img {
+    padding: 15px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.popular-img img {
+    width: 100%;
+}
+
+.popular-img-title {
+    color: #18191F;
+    font-size: 28px;
+    font-weight: 500;
+}
+
+.popular-img-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.popular-img-desc {
+    color: #787885;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.see-more {
+    margin: 50px 0px 100px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 8px;
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 16px;
+    font-weight: 700;
+}
+
 .hide {
     display: none;
 }
 
+
+/* Responsive design for small and medium screen devices */
 
 @media screen and (max-width: 576px) {
     header {
@@ -155,6 +238,23 @@ header {
         width: 90%;
         /* padding-right: 40px; */
     }
+
+    .websites {
+        border-image-slice: 50;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .popular {
+        max-width: max-content;
+        margin: 0px auto;
+    }
+
+    .popular-collection {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -162,7 +262,7 @@ header {
         margin: 90px 60px;
     }
 
-    .banner-img{
+    .banner-img {
         background-size: 80%;
         width: 62%;
         padding: 40px 100px;
@@ -173,5 +273,19 @@ header {
         top: 0px;
         width: 135%;
         padding: 0px;
+    }
+
+    .websites {
+        gap: 20px;
+    }
+
+    .popular {
+        max-width: 100%;
+        padding: 0px 30px 30px;
+    }
+
+    .popular-title {
+        margin-top: 0px;
+        margin-bottom: 30px;
     }
 }
