--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ header {
 }
 
 .see-more {
-    margin: 50px 0px 100px;
+    margin: 50px 0px 0px;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -178,6 +178,35 @@ header {
     color: rgba(224, 44, 109, 0.87);
     font-size: 16px;
     font-weight: 700;
+}
+
+/* feature section styles */
+.feature {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+    width: 1100px;
+    margin: 100px auto;
+}
+
+.feature-title {
+    color: #0A0826;
+    font-size: 38px;
+    font-weight: 700;
+}
+
+.feature-desc {
+    color: #6C6C6C;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+
+
+.btn {
+    border-radius: 0px;
 }
 
 .hide {
@@ -255,6 +284,16 @@ header {
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
     }
+
+    .feature {
+        gap: 30px;
+        max-width: 100%;
+        flex-direction: column;
+        padding: 0px 30px;
+    }
+    .feature img{
+        max-width: 100%;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -287,5 +326,19 @@ header {
     .popular-title {
         margin-top: 0px;
         margin-bottom: 30px;
+    }
+
+    .popular-img-title {
+        font-size: 25px;
+    }
+
+    .popular-img-price {
+        font-size: 20px;
+    }
+
+    .feature {
+        gap: 50px;
+        max-width: 100%;
+        padding: 0px 30px;
     }
 }
